issue_2405 New Nav: User Menu popup is overlapping with the Sub Community

--- a/src/shared/routes/Topcoder/styles.scss
+++ b/src/shared/routes/Topcoder/styles.scss
@@ -8,5 +8,6 @@
     display: flex;
     flex: 1 0 auto;
     position: relative;
+    z-index: 0;
   }
 }
